--- a/home/home/css/responsive.css
+++ b/home/home/css/responsive.css
@@ -851,6 +851,9 @@
   .book-info .title {
     font-size: 28px;
   }
+  #frame{
+    display: none;
+  }
   .bj_category_inner {
     grid-template-columns: repeat(1, 1fr);
   }
